--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@realm/react": "^0.6.2",
     "axios": "^1.6.7",
     "react": "18.2.0",
-    "react-native": "0.73.5"
+    "react-native": "0.73.5",
+    "realm": "^12.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
