--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^11.3.1",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "react": "18.2.0",
-    "react-native": "0.73.5"
+    "react-native": "0.73.5",
+    "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
