--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-paper": "^5.12.3",
     "realm": "^12.6.2"
   },
   "devDependencies": {
