--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-svg": "^15.1.0",
+    "react-native-svg-transformer": "^1.3.0",
+    "react-native-element-dropdown": "^2.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
