--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
   },
   "dependencies": {
     "@react-native-community/netinfo": "^11.3.1",
-    "@reduxjs/toolkit": "^2.2.1",
     "@realm/react": "^0.6.2",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-paper": "^5.12.3",
-    "realm": "^12.6.2",
-    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "realm": "^12.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -31,6 +30,7 @@
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
+    "@types/react-redux": "^7.1.33",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.57.0",
