--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-redux": "^9.1.0",
-    "realm": "^12.6.2"
+    "realm": "^12.6.2",
+    "tsyringe": "^4.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
