--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "@realm/react": "^0.6.2",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-redux": "^9.1.0",
     "realm": "^12.6.2",
+    "reflect-metadata": "^0.2.1",
     "tsyringe": "^4.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-decorators": "^7.24.1",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.73.21",
@@ -33,7 +36,9 @@
     "@types/react": "^18.2.6",
     "@types/react-redux": "^7.1.33",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/realm": "^1.13.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^8.57.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
