--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-ble-plx": "^3.1.2",
+    "react-native-device-info": "^10.13.1",
     "react-native-paper": "^5.12.3",
+    "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^15.1.0",
