--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^3.1.2",
     "react-native-device-info": "^10.13.1",
     "react-native-paper": "^5.12.3",
