--- a/ios/ReactNativeCleanArchitecture/Info.plist
+++ b/ios/ReactNativeCleanArchitecture/Info.plist
@@ -26,14 +26,22 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>App would like to use Bluetooth</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>App would like to use Bluetooth</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>bluetooth-central</string>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -48,9 +56,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string>App would like to use Bluetooth</string>
-	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>App would like to use Bluetooth</string>
 </dict>
 </plist>
